--- a/templates/weather.html
+++ b/templates/weather.html
@@ -45,25 +45,37 @@
             <div class="columns">
                 <div class="column is-offset-4 is-4">
 {#                    {% for weather in weather_data %}#}
+                    {% for weath in weather_data %}
                     <div class="box">
                         <article class="media">
                             <div class="media-left">
                                 <figure class="image is-50x50">
-                                    <img src="http://openweathermap.org/img/w/{{ weath['Icon'] }}.png" alt="Image">
+                                    <img src="http://openweathermap.org/img/w/{{ weath['Icon1'] }}.png" alt="Image">
                                 </figure>
                             </div>
                             <div class="media-content">
                                 <div class="content">
                                     <p>
-                                        <span class="title">{{ weath['City'] }}</span>
+                                        <span class="title">{{ weath['City'] }} </span>
                                         <br>
-                                        <span class="subtitle">{{weath['Temp']}}° C</span>
-                                        <br> {{ weath['Desc'] }}
+                                        <img src="http://openweathermap.org/img/w/{{ weath['Icon1'] }}.png" alt="Image">
+                                        <span>00:00  </span><span class="subtitle">{{weath['Temp_0000']}}° C</span>
+                                        <br>
+                                        <img src="http://openweathermap.org/img/w/{{ weath['Icon2'] }}.png" alt="Image">
+                                        <span>06:00  </span><span class="subtitle">{{weath['Temp_0006']}}° C</span>
+                                        <br>
+                                        <img src="http://openweathermap.org/img/w/{{ weath['Icon3'] }}.png" alt="Image">
+                                        <span>12:00  </span><span class="subtitle">{{weath['Temp_0012']}}° C</span>
+                                        <br>
+                                        <img src="http://openweathermap.org/img/w/{{ weath['Icon4'] }}.png" alt="Image">
+                                        <span>18:00  </span><span class="subtitle">{{weath['Temp_0018']}}° C</span>
+                                        <br> {{ weath['Desdsc'] }}
                                     </p>
                                 </div>
                             </div>
                         </article>
                     </div>
+                    {% endfor %}
 {#                    {% endfor %}#}
                 </div>
             </div>
